[project]
name = "docs"
version = "0.1.0"
description = ""
authors = [
    {name = "Julien-Fruteau"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mkdocs-material (>=9.6.3,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
